Actualizado imagen y enlace de toutube

--- a/formulario.html
+++ b/formulario.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <h2>Crear una nueva cuenta</h2>
+
+    <!-- Imagen añadida -->
+    <img src="https://via.placeholder.com/300" alt="Imagen de ejemplo" width="300"><br><br>
+
+    <!-- Enlace a tu sitio web favorito -->
+    <p>Visita mi <a href="https://www.mywiddi.com/" target="_blank">sitio web favorito</a></p><br>
+
     <form action="/submit" method="POST">
         <label for="nombre">Nombre y Apellidos:</label>
         <input type="text" id="nombre" name="nombre" required><br><br>
@@ -22,6 +29,10 @@
 
         <button type="submit">Crear Usuario</button>
     </form>
+
+    <!-- Video de YouTube insertado -->
+    <h3>Video de YouTube</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 </body>
 </html>
-
